--- a/ProyectoPAV1/Clase02/Clase02.csproj
+++ b/ProyectoPAV1/Clase02/Clase02.csproj
@@ -47,9 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesoADatos\AD_Carreras.cs" />
     <Compile Include="AccesoADatos\AD_Personas.cs" />
     <Compile Include="AccesoADatos\AD_Usuarios.cs" />
+    <Compile Include="AccesoADatos\AD_Cursos.cs" />
     <Compile Include="AccesoADatos\AD_Varios.cs" />
+    <Compile Include="AltaCurso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AltaCurso.Designer.cs">
+      <DependentUpon>AltaCurso.cs</DependentUpon>
+    </Compile>
     <Compile Include="AltaPersona.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +86,9 @@
     <Compile Include="Usuarios.Designer.cs">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AltaCurso.resx">
+      <DependentUpon>AltaCurso.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AltaPersona.resx">
       <DependentUpon>AltaPersona.cs</DependentUpon>
     </EmbeddedResource>
@@ -121,6 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\IconoPersona.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\IconoEstudiante.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
